# app-service

./: .pylintrc  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: check.yml
app/apis/: __init__.py  db.py  root.py  storage.py
app/managers/dynamo_db/: __init__.py  base_db.py  delete_item.py  get_item.py  put_item.py  query_items.py  scan_item.py
app/managers/s3/: delete_data.py  get_data.py  upload_data.py
app/services/: __init__.py  root_service.py
tests/: test_main.py
